# wayframe

./: Cargo.toml  README.md  ROADMAP.md
src/: main.rs
src/config/: app_identity.rs  keyboard.rs  mod.rs
src/server/: mod.rs
src/types/: mod.rs
src/ui/: mod.rs
